--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
        <a href="prácticas.html">
 
         <h2>Prácticas</h2></a>
-        
-
-       
+        <h3>Ejemplo de imágenes en html</h3>
+        <img src="imagentic.jpg" alt="Ies María Inmaculada">
     </body>
 </html>
