--- a/index.html
+++ b/index.html
@@ -2,9 +2,15 @@
 <html>
     <head>
         <title>Mi primera web</title>
-    <head>
+        <style>
+            #paula{color: #ef42c2; font-size:20px}
+            h2{color: #ef42c2; font-size:20px}
+            h3{color: #ef42c2; font-size:20px}
+            body{margin-left:25%; margin-right:25%; background: #efbb42;  text-align: center; border: 15px solid;}
+        </style>
+    </head>
     <body>
-        <h1>Tecnología de la información y de la comunicación</h1>
+        <h1 id="paula">Tecnología de la información y de la comunicación</h1>
 
         <h2>Presentación</h2>
         <p>Aquí puedes encontrar todo el material desarrollado, tanto teórico como práctico. </p>
