--- a/prácticas.html
+++ b/prácticas.html
@@ -2,9 +2,15 @@
 <html>
     <head>
         <title>Mi primera web</title>
+        <style>
+            #paula{color: #ef42c2; font-size:20px}
+            h2{color: #ef42c2; font-size:20px}
+            h3{color: #ef42c2; font-size:20px}
+            body{ margin-left:25%; margin-right:25%; background: #efbb42;  text-align: center; border: 15px solid;}
+        </style>
     </head>
     <body>
-        <h1>Parte práctica</h1>
+        <h1 class="paula">Parte práctica</h1>
         <p>Plantear procesos de buenas prácticas educativas con TIC en el aula conlleva la articulación de un sistema metodológico participativo que capacite, por una lado, al estudiante para desarrollar un aprendizaje autónomo y de colaboración y, por otro, que sitúe al profesorado como facilitador de los procesos del manejo crítico de la información y de la creación de los propios significados.</p>
         <a href="index.html">
             <img src="imagentic.jpg">
