--- a/teoria.html
+++ b/teoria.html
@@ -2,6 +2,12 @@
 <html>
     <head>
         <title>Mi primera web</title>
+        <style>
+            h1{color: #ef42c2; font-size:20px}
+            h2{color: #ef42c2; font-size:20px}
+            h3{color: #ef42c2; font-size:20px}
+            body{ margin-left:25%; margin-right:25%; background: #efbb42;  text-align: center; border: 15px solid;}
+        </style>
     <head>
     <body>
         <h1>Tecnología de la información y de la comunicación</h1>
