--- a/prácticas.html
+++ b/prácticas.html
@@ -3,7 +3,7 @@
     <head>
         <title>Mi primera web</title>
         <style>
-            #paula{color: #ef42c2; font-size:20px}
+            .paula{color: #ef42c2; font-size:20px}
             h2{color: #ef42c2; font-size:20px}
             h3{color: #ef42c2; font-size:20px}
             body{ margin-left:25%; margin-right:25%; background: #efbb42;  text-align: center; border: 15px solid;}
